--- a/src/Hjmos.BaseControls/Themes/Styles/ListBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ListBox.xaml
@@ -9,8 +9,7 @@
         <ResourceDictionary Source="ScrollViewer.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <Style BasedOn="{StaticResource ListBoxBaseStyle}" TargetType="ListBox" />
-
-
+    <Style BasedOn="{StaticResource ListBoxEditableBaseStyle}" TargetType="controls:ListBoxEditable" x:Key="ListBoxEditable"/>
     <ItemsPanelTemplate x:Key="WrapPanelHorizonlItemsPanelTemplate">
         <WrapPanel
             HorizontalAlignment="Center"
@@ -127,8 +126,12 @@
         </Setter>
     </Style>
 
+   
 
-
+    
+    
+    
+    
     <Style x:Key="TitleListStyle" TargetType="ListBox">
         <Setter Property="ItemContainerStyle" Value="{StaticResource LisBoxItemNormalStyle}" />
         <Setter Property="ItemsPanel" Value="{StaticResource StackPanelHorizontalItemsPanelTemplate}" />
