--- a/Tests/Controltest/UserControl4.xaml
+++ b/Tests/Controltest/UserControl4.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<hj:UserControl
     x:Class="Controltest.UserControl4"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,6 +9,8 @@
     xmlns:local="clr-namespace:Controltest"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Name="user"
+    Style="{StaticResource UserControlPlus}"
+    IsBusy="True"
     d:DesignHeight="960"
     d:DesignWidth="1080"
     mc:Ignorable="d">
@@ -221,12 +223,12 @@
                 IsReadOnly="True"
                 Style="{StaticResource EditTextBoxBaseStyle}"
                 Text="12334" />
-            <Button
+            <!--<Button
                 Grid.Column="1"
                 Click="Button_Click_1"
-                Content="111" />
+                Content="111" />-->
 
-
+            <hj:EditButton Foreground="Red"  Background="Transparent" IsEnabled="False" Grid.Column="1" />
         </Grid>
 
         <hj:ListBoxEditable
@@ -249,4 +251,4 @@
             </ListBox.ItemTemplate>
         </hj:ListBoxEditable>
     </Grid>
-</UserControl>
+</hj:UserControl>
