--- a/Tests/Controltest/Window7.xaml
+++ b/Tests/Controltest/Window7.xaml
@@ -3,8 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
     xmlns:local="clr-namespace:Controltest"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:prism="http://prismlibrary.com/"
     Title="Window7"
     Width="800"
     Height="450"
@@ -28,6 +29,42 @@
         </ListBox>-->
 
 
-        <local:UserControl4 />
+        <!--<local:UserControl4 />-->
+
+        <!--<local:Window2/>-->
+        <!--<local:Window1/>-->
+        <!--<Button
+            x:Name="PART_HomeButton"
+            hj:IconElement.Geometry="{StaticResource HomeGeometry}"
+            hj:IconElement.Height="14"
+            Background="Transparent"
+            Content="线网全景"
+            FontSize="14"
+            Foreground="#FF13FFF5">
+            <Button.Style>
+                <Style BasedOn="{StaticResource ButtonBaseStyle}" TargetType="Button" />
+            </Button.Style>
+        </Button>-->
+        <!--<ToggleButton
+            Grid.Column="3"
+            Width="14"
+            Height="14"
+            Margin="10,0"
+            BorderThickness="0"
+            Background="Transparent"
+            Foreground="#FF13FFF5"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            hj:IconElement.Geometry="{StaticResource CloseGeometry}"
+            IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+            Style="{StaticResource ToggleButtonBaseStyle}" />-->
+        <ListBox Grid.Row="1" Margin="5" ItemsSource="{Binding Items}" SelectionMode="Single">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <!-- 调用选择命令，并且传递参数 -->
+                    <prism:InvokeCommandAction Command="{Binding SelectionChangedCommand}" TriggerParameterPath="AddedItems"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListBox>
     </Grid>
 </Window>
