--- a/Tests/Controltest/Window8.xaml
+++ b/Tests/Controltest/Window8.xaml
@@ -3,13 +3,29 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
     xmlns:local="clr-namespace:Controltest"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
-    Title="Window8"
+    Title="Window8" 
     Width="800"
     Height="450"
     mc:Ignorable="d">
+    <Window.Resources>
+        <ResourceDictionary>
+            <Style BasedOn="{StaticResource TextBoxPlusIcon}" TargetType="hj:TextBox">
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="BorderBrush" Value="#FF17557F" />
+                <Setter Property="BorderThickness" Value="1" />
+                <Setter Property="ShowClearButton" Value="True" />
+                <Setter Property="hj:InfoElement.MinContentHeight" Value="10" />
+                <Setter Property="hj:BorderElement.CornerRadius" Value="0" />
+                <Setter Property="FontSize" Value="{local:CuStaticResource Opacity={StaticResource HeadFontSize}}" />
+                <Setter Property="hj:InfoElement.ContentHeight" Value="30" />
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="Foreground" Value="Black" />
+            </Style>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid x:Name="myGrid">
         <!--<Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -23,20 +39,45 @@
         </Grid.RowDefinitions>-->
 
         <!--<hj:Carousel></hj:Carousel>-->
-        <hj:Carousel ItemsSource="{Binding Data}"    Margin="95,175,383.333,75.667"  >
+        <!--<hj:Carousel ItemsSource="{Binding Data}"    Margin="95,175,383.333,75.667"  >
             <hj:Carousel.ItemTemplate>
                 <DataTemplate>
                     <Border Background="Red" >
                         <TextBlock Text="{Binding}" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                       
+
                     </Border>
                 </DataTemplate>
             </hj:Carousel.ItemTemplate>
-            
-         
-        </hj:Carousel>
+        </hj:Carousel>-->
 
-
+        <hj:TextBox
+            Margin="314,172,290,181"
+            hj:IconElement.Geometry="{StaticResource AccountGeometry}"
+            hj:IconElement.Height="16"
+            hj:IconElement.Width="16"
+            hj:InfoElement.Placeholder="admin"
+            BorderBrush="Gray"
+            BorderThickness="0,0,0,2" />
+        <hj:TextBox
+            Margin="76,215,528,138"
+            hj:IconElement.Geometry="{StaticResource VerificationGeometry}"
+            hj:IconElement.Height="16"
+            hj:IconElement.Width="16"
+            hj:InfoElement.Placeholder="验证码"
+            BorderBrush="Gray"
+            BorderThickness="0,0,0,2" />
+        <hj:PasswordBox
+            Margin="25,301,422,67"
+            hj:BorderElement.CornerRadius="0"
+            hj:IconElement.Geometry="{StaticResource LockGeometry}"
+            hj:IconElement.Height="16"
+            hj:IconElement.Width="16"
+            hj:InfoElement.Placeholder="密码"
+            hj:InfoElement.TitleWidth="0"
+            BorderBrush="Red"
+            BorderThickness="0,0,0,2"
+            ShowClearButton="False"
+            ShowEyeButton="True" />
 
 
     </Grid>
