--- a/src/Hjmos.BaseControls/Themes/Styles/ItemsControl.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ItemsControl.xaml
@@ -1,33 +1,65 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    >
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:control="clr-namespace:Hjmos.BaseControls.Controls">
 
     <ItemsPanelTemplate x:Key="WrapPanelHorizonlItemsPanelTemplate">
-        <WrapPanel FocusVisualStyle="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <WrapPanel
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FocusVisualStyle="{x:Null}" />
     </ItemsPanelTemplate>
     <Style x:Key="WrapPanelHorizonItemsControl" TargetType="ItemsControl">
-        <Setter Property="ItemsPanel" Value="{StaticResource WrapPanelHorizonlItemsPanelTemplate}"/>
+        <Setter Property="ItemsPanel" Value="{StaticResource WrapPanelHorizonlItemsPanelTemplate}" />
     </Style>
 
     <ItemsPanelTemplate x:Key="WrapPanelVerticalItemsPanelTemplate">
-        <WrapPanel FocusVisualStyle="{x:Null}" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <WrapPanel
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FocusVisualStyle="{x:Null}"
+            Orientation="Vertical" />
     </ItemsPanelTemplate>
-    <Style x:Key="WrapPanelVerticalItemsControl"  TargetType="ItemsControl">
-        <Setter Property="ItemsPanel" Value="{StaticResource WrapPanelVerticalItemsPanelTemplate}"/>
+    <Style x:Key="WrapPanelVerticalItemsControl" TargetType="ItemsControl">
+        <Setter Property="ItemsPanel" Value="{StaticResource WrapPanelVerticalItemsPanelTemplate}" />
     </Style>
 
     <ItemsPanelTemplate x:Key="StackPanelHorizontalItemsPanelTemplate">
-        <StackPanel FocusVisualStyle="{x:Null}" Orientation="Horizontal"/>
+        <StackPanel FocusVisualStyle="{x:Null}" Orientation="Horizontal" />
     </ItemsPanelTemplate>
-    <Style x:Key="StackPanelHorizontalItemsControl" TargetType="ItemsControl" >
-        <Setter Property="ItemsPanel" Value="{StaticResource StackPanelHorizontalItemsPanelTemplate}"/>
+    <Style x:Key="StackPanelHorizontalItemsControl" TargetType="ItemsControl">
+        <Setter Property="ItemsPanel" Value="{StaticResource StackPanelHorizontalItemsPanelTemplate}" />
     </Style>
 
     <ItemsPanelTemplate x:Key="StackPanelVerticalItemsPanelTemplate">
-        <StackPanel FocusVisualStyle="{x:Null}" Orientation="Vertical"/>
+        <StackPanel FocusVisualStyle="{x:Null}" Orientation="Vertical" />
     </ItemsPanelTemplate>
 
-    <Style x:Key="StackPanelVerticalItemsControls" TargetType="ItemsControl" >
-        <Setter Property="ItemsPanel" Value="{StaticResource StackPanelVerticalItemsPanelTemplate}"/>
+    <Style x:Key="StackPanelVerticalItemsControls" TargetType="ItemsControl">
+        <Setter Property="ItemsPanel" Value="{StaticResource StackPanelVerticalItemsPanelTemplate}" />
+    </Style>
+
+    <ControlTemplate x:Key="CustomItemsControlTemplate" TargetType="control:CustomItemControl">
+        <control:SimplePanel>
+            <Rectangle
+                x:Name="PART_Rectangle"
+                Height="6"
+                Margin="{TemplateBinding Padding}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                Fill="Red"
+                StrokeThickness="0" />
+            <ItemsPresenter />
+        </control:SimplePanel>
+    </ControlTemplate>
+
+    <ItemsPanelTemplate x:Key="CustomItemsPanelTemplate">
+        <UniformGrid Rows="1" />
+    </ItemsPanelTemplate>
+
+    <Style x:Key="CustomItemsControl" TargetType="control:CustomItemControl">
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Template" Value="{StaticResource CustomItemsControlTemplate}" />
+        <Setter Property="ItemsPanel" Value="{StaticResource CustomItemsPanelTemplate}" />
     </Style>
 </ResourceDictionary>
